Fix layout of navbar generator list on mobile

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -60,12 +60,17 @@
 
 .linkList {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: stretch;
   justify-content: flex-end;
+}
+
+.linkWrapper {
   margin-bottom: 8px;
-  flex-wrap: wrap;
 }
 
 .linkWrapper:not(:last-child) {
@@ -75,7 +80,7 @@
 .link {
   text-decoration: none;
   text-align: center;
-  margin-bottom: 8px;
+  color: unset;
 }
 
 .link:hover {
